# iron

./: CLAUDE.md  Cargo.toml  README.md  README_zh.md  analysis.md  iron-export-2026-04-18.json  patterns.md
.claude/: bump-version.sh  settings.json
.claude/skills/training-coach/: SKILL.md
docs/: index.html  plan.md  test-plan.md
docs/specs/: abbreviations-spec.md  dashboard-spec.md  data-model-spec.md  export-import-spec.md  goals-spec.md  history-spec.md  log-entry-spec.md  navigation-spec.md  practices-spec.md  quick-log-spec.md  trends-spec.md  widgets-spec.md
docs/superpowers/plans/: 2026-04-16-ironcli-implementation.md  2026-04-17-dashboard-enhancements.md  2026-04-17-quotes-db.md  2026-04-18-i18n-implementation.md  2026-04-18-training-coach-skill.md  2026-04-18-warmup-cooldown-hrv-implementation.md  2026-05-12-quick-log-implementation.md  2026-05-13-heatmap-multiview.md  2026-06-29-migrate-db-schema.md  2026-06-30-rpe-plan.md
docs/superpowers/specs/: 2026-04-16-ironcli-design.md  2026-04-17-dashboard-enhancements-design.md  2026-04-17-quotes-db-design.md  2026-04-18-i18n-design.md  2026-04-18-training-coach-skill-design.md  (+3 more)
locales/: en.ftl  zh-CN.ftl
src/: app.rs  config.rs  db.rs  export.rs  i18n.rs  lib.rs  llm.rs  main.rs  model.rs
src/tui/: abbreviations.rs  dashboard.rs  goals.rs  history.rs  log_entry.rs  mod.rs  practices.rs  quick_log.rs  quotes.rs  quotes_screen.rs  trends.rs
tests/: config_test.rs  db_test.rs  export_import_integration_test.rs  export_test.rs  i18n_test.rs  llm_test.rs  model_test.rs  quotes_test.rs  tui_lint_test.rs
(+6 files in other folders)
