[package]
name = "ironcli"
version = "0.1.3"
edition = "2021"
description = "A beautiful TUI for tracking training records"

[[bin]]
name = "iron"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
