[package]
name = "iron"
version = "1.0.111"
edition = "2021"
description = "A beautiful TUI for tracking training records"

[[bin]]
name = "iron"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
anyhow = "1"
fluent-bundle = "0.15"
unic-langid = "0.9"
unicode-width = "0.2"
rand = "0.9"

[dev-dependencies]
tempfile = "3"
fluent-syntax = "0.11"
